--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,115 +1,302 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
+@string{aps      = {American Physical Society}}
+@string{springer = {Springer}}
+@string{fip      = {Frontiers in Physics}}
+@string{mdpi     = {MDPI}}
+@string{elsevier = {Elsevier}}
+@string{ieee     = {IEEE}}
+@string{iuc      = {International Union of Crystallography}}
+@string{nature   = {Nature}}
+@string{iop      = {IOP Publishing}}
 
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
-}
-
-@book{einstein1956investigations,
+@article{adli2025clic,
+  abbr={Springer},
   bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+  title={CLIC readiness report},
+  author={CLIC Collaboration},
+  journal={The European Physical Journal Special Topics},
+  pages={1--180},
+  year={2025},
+  publisher={Springer}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
+@article{rieker2025radiochromic,
+  abbr={Frontiers},
   bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+  title={Radiochromic film dosimetry for VHEE and UHDR: protocol adaptation and verification at the CLEAR facility},
+  author={Rieker, Vilde F and Bateman, Joseph J and Wroe, Laurence and Caloz, Misael and Grilj, Veljko and Aguiar, Ygor Q and Sch{\"u}ller, Andreas and Bailat, Claude and Farabolini, Wilfrid and Gilardi, Antonio and others},
+  journal={Frontiers in Physics},
+  volume={13},
+  pages={1597079},
+  year={2025},
+  publisher={Frontiers Media SA}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
-  inspirehep_id = {3255}
+@article{king2025systematic,
+  abbr={MDPI},
+  bibtex_show={true},
+  title={A systematic investigation of beam losses and position-reconstruction techniques measured with a novel oBLM at CLEAR},
+  author={King, Montague and Benitez, Sara and Gilardi, Antonio and Christie, Alexander and Effinger, Ewald and Esteban, Jose and Farabolini, Wilfrid and Gilardi, Antonio and Korysko, Pierre and Meyer, Jean Michel and Salvachua, Belen and others},
+  journal={Instruments},
+  volume={9},
+  number={1},
+  pages={4},
+  year={2025},
+  publisher={MDPI}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
+@article{rieker2024active,
+  abbr={Elsevier},
+  bibtex_show={true},
+
+  title={Active dosimetry for VHEE FLASH radiotherapy using beam profile monitors and charge measurements},
+  author={Rieker, Vilde F and Corsini, Roberto and Gilardi, Antonio and Stapnes, Steinar and Adli, Erik and Farabolini, Wilfrid and Grilj, Veljko and Sjobak, Kyrre N and Wroe, Laurence M and Aksoy, Avni and Robertson, Cameron S and others},
+  journal={Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
+  volume={1069},
+  pages={169845},
+  year={2024},
+  publisher={Elsevier}
+}
+
+@article{arpaia2024roadmap,
+  abbr={IEEE},
+  bibtex_show={true},
+
+  title={Roadmap for Measurement and Applications: An Overview on Quench Detection Techniques for High-Temperature Superconducting Cables and Magnets},
+  author={Arpaia, Pasquale and Cuneo, Davide and Esposito, Antonio and Gilardi, Antonio and Ramos, Pedro M},
+  journal={IEEE Instrumentation \& Measurement Magazine},
+  volume={27},
+  number={9},
+  pages={29--37},
+  year={2024},
+  publisher={IEEE}
+}
+
+@article{liu2023user,
+  abbr={IUC},
+  bibtex_show={true},
+
+  title={A user-friendly plug-and-play cyclic olefin copolymer-based microfluidic chip for room-temperature, fixed-target serial crystallography},
+  author={Liu, Zhongrui and Gu, Kevin K and Shelby, Megan L and Gilbile, Deepshika and Lyubimov, Artem Y and Russi, Silvia and Cohen, Aina E and Narayanasamy, Sankar Raju and Botha, Sabine and Kupitz, Christopher and Gilardi, Antonio and others},
+  journal={Biological Crystallography},
+  volume={79},
+  number={10},
+  pages={944--952},
+  year={2023},
+  publisher={International Union of Crystallography}
+}
+
+@article{ferrentino2023analysis,
+  abbr={IEEE},
+  bibtex_show={true},
+
+  title={Analysis of powering and quench protection of the SIGRUM superconducting combined-function dipole magnet},
+  author={Ferrentino, Vittorio and Arpaia, Pasquale and Gilardi, Antonio and Karppinen, Mikko and Kokkinos, Charilaos and Ravaioli, Emmanuele},
+  journal={IEEE Transactions on Applied Superconductivity},
+  volume={33},
+  number={7},
+  pages={1--8},
+  year={2023},
+  publisher={IEEE}
+}
+
+@article{cropp2023virtual,
+  abbr={APS},
+  bibtex_show={true},
+
+  title={Virtual-diagnostic-based time stamping for ultrafast electron diffraction},
+  author={Cropp, Frederick and Moos, Lauren and Scheinker, Alexander and Gilardi, Antonio and Wang, Dan and Paiagua, Sergio and Serrano, Carlos and Musumeci, Pietro and Filippetto, Daniele},
+  journal={Physical Review Accelerators and Beams},
+  volume={26},
+  number={5},
+  pages={052801},
+  year={2023},
+  publisher={APS}
+}
+
+@article{chen2023broadband,
+  abbr={Optics},
+  bibtex_show={true},
+
+  title={Broadband spectral combining of three pulse-shaped fiber amplifiers with 42fs compressed pulse duration},
+  author={Chen, Siyun and Zhou, Tong and Du, Qiang and Wang, Dan and Gilardi, Antonio and Vay, Jean-Luc and Li, Derun and van Tilborg, Jeroen and Schroeder, Carl and Esarey, Eric and others},
+  journal={Optics Express},
+  volume={31},
   number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+  pages={12717--12724},
+  year={2023},
+  publisher={Optica Publishing Group}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@Article{einstein1905photoelectriceffect,
+@article{lauria2022rotating,
+  abbr={MDPI},
   bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
+
+  title={Rotating-coil measurement system for small-bore-diameter magnet characterization},
+  author={Lauria, Anna and Arpaia, Pasquale and Buzio, Marco and Gilardi, Antonio and Parvis, Marco and Pentella, Mariano and Sabbatini, Lucia and Simoni, Enzo and Vannozzi, Alessandro},
+  journal={Sensors},
+  volume={22},
+  number={21},
+  pages={8359},
+  year={2022},
+  publisher={MDPI}
+}
+
+@article{wang2022machine,
+  abbr={IEEE},
+  bibtex_show={true},
+
+  title={Machine learning pattern recognition algorithm with applications to coherent laser combination},
+  author={Wang, Dan and Du, Qiang and Zhou, Tong and Gilardi, Antonio and Kiran, Mariam and Mohammed, Bashir and Li, Derun and Wilcox, Russell},
+  journal={IEEE Journal of Quantum Electronics},
+  volume={58},
   number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
+  pages={1--9},
+  year={2022},
+  publisher={IEEE}
 }
 
-@book{przibram1967letters,
+@article{du2022experimental,
+  abbr={Optica},
   bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+
+  title={Experimental beam combining stabilization using machine learning trained while phases drift},
+  author={Du, Qiang and Wang, Dan and Zhou, Tong and Gilardi, Antonio and Kiran, Mariam and Mohammed, Bashir and Li, Derun and Wilcox, Russell},
+  journal={Optics Express},
+  volume={30},
+  number={8},
+  pages={12639--12653},
+  year={2022},
+  publisher={Optica Publishing Group}
 }
+
+@article{lerner2022analysis,
+  abbr={IEEE},
+  bibtex_show={true},
+
+  title={Analysis of the photoneutron field near the THz dump of the CLEAR accelerator at CERN with SEU measurements and simulations},
+  author={Lerner, Giuseppe and Coronetti, Andrea and Kempf, Jean Ma{\"e}l and Al{\'\i}a, Rub{\'e}n Garc{\'\i}a and Cerutti, Francesco and Prelipcean, Daniel and Cecchetto, Matteo and Gilardi, Antonio and Farabolini, Wilfrid and Corsini, Roberto},
+  journal={IEEE Transactions on Nuclear Science},
+  volume={69},
+  number={7},
+  pages={1541--1548},
+  year={2022},
+  publisher={IEEE}
+}
+
+@article{kokurewicz2021experimental,
+  abbr={Nature},
+  bibtex_show={true},
+
+  title={An experimental study of focused very high energy electron beams for radiotherapy},
+  author={Kokurewicz, Karolina and Brunetti, Enrico and Curcio, Alessandro and Gamba, Davide and Garolfi, Luca and Gilardi, Antonio and Senes, Eugenio and Sjobak, Kyrre Ness and Farabolini, Wilfrid and Corsini, Roberto and others},
+  journal={Communications Physics},
+  volume={4},
+  number={1},
+  pages={33},
+  year={2021},
+  publisher={Nature Publishing Group UK London}
+}
+
+@article{small2021evaluating,
+  abbr={Nature},
+  bibtex_show={true},
+
+  title={Evaluating very high energy electron RBE from nanodosimetric pBR322 plasmid DNA damage},
+  author={Small, KL and Henthorn, NT and Angal-Kalinin, Deepa and Chadwick, AL and Santina, Elham and Aitkenhead, Adam and Kirkby, Karen J and Smith, RJ and Surman, M and Jones, J and Gilardi, Antonio and others},
+  journal={Scientific Reports},
+  volume={11},
+  number={1},
+  pages={3341},
+  year={2021},
+  publisher={Nature Publishing Group UK London}
+}
+
+@article{poppinga2020vhee,
+  abbr={IOP},
+  bibtex_show={true},
+
+  title={VHEE beam dosimetry at CERN Linear Electron Accelerator for Research under ultra-high dose rate conditions},
+  author={Poppinga, Daniela and Kranzer, Rafael and Farabolini, Wilfrid and Gilardi, Antonio and Corsini, Roberto and Wyrwoll, Vanessa and Looe, Hui Khee and Delfs, Bj{\"o}rn and Gabrisch, Lukas and Poppe, Bj{\"o}rn},
+  journal={Biomedical Physics \& Engineering Express},
+  volume={7},
+  number={1},
+  pages={015012},
+  year={2020},
+  publisher={IOP Publishing}
+}
+
+@article{sabato2020measurement,
+  abbr={IEEE},
+  bibtex_show={true},
+
+  title={A measurement method based on RF deflector for particle bunch longitudinal parameters in linear accelerators},
+  author={Sabato, Luca and Arpaia, Pasquale and Gilardi, Antonio and Mostacci, Andrea and Palumbo, Luigi and Variola, Alessandro},
+  journal={IEEE Transactions on Instrumentation and Measurement},
+  volume={70},
+  pages={1--9},
+  year={2020},
+  publisher={IEEE}
+}
+
+@article{arpaia2020enhancing,
+  abbr={Nature},
+  bibtex_show={true},
+
+  title={Enhancing particle bunch-length measurements based on radio frequency deflector by the use of focusing elements},
+  author={Arpaia, Pasquale and Corsini, Roberto and Gilardi, Antonio and Mostacci, Andrea and Sabato, Luca and Sjobak, Kyrre N},
+  journal={Scientific reports},
+  volume={10},
+  number={1},
+  pages={11457},
+  year={2020},
+  publisher={Nature Publishing Group UK London}
+}
+
+@article{mcmanus2020challenge,
+  abbr={Nature},
+  bibtex_show={true},
+
+  title={The challenge of ionisation chamber dosimetry in ultra-short pulsed high dose-rate Very High Energy Electron beams},
+  author={McManus, M and Romano, F and Lee, ND and Farabolini, W and Gilardi, A and Royle, G and Palmans, H and Subiel, Anna},
+  journal={Scientific reports},
+  volume={10},
+  number={1},
+  pages={9089},
+  year={2020},
+  publisher={Nature Publishing Group UK London}
+}
+
+@article{curcio2020noninvasive,
+  abbr={APS},
+  bibtex_show={true},
+
+  title={Noninvasive bunch length measurements exploiting Cherenkov diffraction radiation},
+  author={Curcio, A and Bergamaschi, M and Corsini, R and Gilardi, A and Farabolini, W and Gamba, D and Garolfi, L and Kieffer, R and Lefevre, T and Mazzoni, S and Fedorov, K and others},
+  journal={Physical Review Accelerators and Beams},
+  volume={23},
+  number={2},
+  pages={022802},
+  year={2020},
+  publisher={APS}
+}
+
+@article{arpaia2019reducing,
+  abbr={Elsevier},
+  bibtex_show={true},
+
+  title={Reducing parasitic resonances in particle accelerators components by broadband Higher--Order--Mode couplers},
+  author={Arpaia, Pasquale and Berrig, Olav E and De Vito, Luca and Gilardi, Antonio},
+  journal={Measurement},
+  volume={146},
+  pages={938--947},
+  year={2019},
+  publisher={Elsevier}
+}
+
+
+
+
+
